--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   shared_preferences: ^2.5.3
   google_fonts: ^6.3.1
   awesome_notifications: ^0.10.1
-  provider: ^6.1.5+1
   just_audio_background: ^0.0.1-beta.17
   permission_handler: ^12.0.1
   flutter_qiblah: ^3.1.0+1
@@ -24,6 +23,8 @@ dependencies:
   shimmer: ^3.0.0
   geolocator: ^13.0.4
   adhan: ^2.0.0+1
+  hijri: ^3.0.0
+  geocoding: ^4.0.0
   
 
 
