--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,11 @@ dependencies:
   disable_battery_optimization: ^1.1.2
   share_plus: ^12.0.0
 
-
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
 
 flutter:
   uses-material-design: true
@@ -43,5 +41,12 @@ flutter:
     - assets/images/kaaba.png
     - assets/images/allah.png
     - assets/images/seb7a.png
+    - assets/images/muslim_logo.png
     - assets/json/azkar.json
     - assets/json/names_of_allah.json
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/images/muslim_logo.png"
+  min_sdk_android: 21
+
