--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   geocoding: ^4.0.0
   disable_battery_optimization: ^1.1.2
   share_plus: ^12.0.0
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
