--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   quran: ^1.3.3
   just_audio: ^0.10.4
   intl: ^0.20.2
@@ -37,6 +39,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/images/kaaba.png
@@ -50,4 +53,3 @@ flutter_launcher_icons:
   android: "launcher_icon"
   image_path: "assets/images/muslim_logo.png"
   min_sdk_android: 21
-
