--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   disable_battery_optimization: ^1.1.2
   share_plus: ^12.0.0
   skeletonizer: ^2.1.0+1
+  latlong2: ^0.9.1
+  flutter_map: ^8.2.2
 
 dev_dependencies:
   flutter_test:
