--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   skeletonizer: ^2.1.0+1
   latlong2: ^0.9.1
   flutter_map: ^8.2.2
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
