add safeArea and solve jetbrain error

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,6 +2,9 @@ org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m
 android.useAndroidX=true
 android.enableJetifier=true
 
-# جديد
-kotlin.jvm.target=11
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+# Kotlin & Java settings
+kotlin.compiler.jvmTarget=17
+org.gradle.java.home=C:/Program Files/Java/jdk-17
+
+# Temporary fix for cache issues
+kotlin.incremental=false
