--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_map: ^8.2.2
   workmanager: ^0.9.0+3
   flutter_map_animations: ^0.9.0
+  syncfusion_flutter_sliders: ^31.2.3
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,7 @@ flutter:
     - assets/images/kaaba.png
     - assets/images/allah.png
     - assets/images/seb7a.png
+    - assets/images/zakat.png
     - assets/images/muslim_logo.png
     - assets/json/azkar.json
     - assets/json/azkar_en.json
