--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   latlong2: ^0.9.1
   workmanager: ^0.9.0+3
   syncfusion_flutter_sliders: ^31.2.4
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
