--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   syncfusion_flutter_sliders: ^31.2.4
   url_launcher: ^6.3.2
   in_app_update: ^4.2.5
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
