--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   package_info_plus: ^9.0.0
   path_provider: ^2.1.5
   screenshot: ^3.0.0
+  in_app_review: ^2.0.11
 
 dev_dependencies:
   flutter_test:
