--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.1.5
   screenshot: ^3.0.0
   in_app_review: ^2.0.11
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
