--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
     <!-- 📍 الموقع -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- للخلفية -->
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <!-- للخلفية (تم الحذف للامتثال لمتطلبات جوجل بلاي) -->
+  
+
 
     <!-- 🌍 الإنترنت -->
     <uses-permission android:name="android.permission.INTERNET"/>
