--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   screenshot: ^3.0.0
   in_app_review: ^2.0.11
   scrollable_positioned_list: ^0.3.8
+  internet_state_manager: ^1.10.1+3
 
 dev_dependencies:
   flutter_test:
