--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: muslim
 description: "Quran Reader & Player"
 publish_to: "none"
-version: 0.1.0
+version: 0.1.1+2
 
 environment:
   sdk: ^3.9.0
@@ -40,6 +40,7 @@ dependencies:
   in_app_review: ^2.0.11
   scrollable_positioned_list: ^0.3.8
   internet_state_manager: ^1.10.1+3
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,7 @@ flutter:
     - assets/json/azkar.json
     - assets/json/azkar_en.json
     - assets/json/names_of_allah.json
+    - assets/home/
 
 flutter_launcher_icons:
   android: "launcher_icon"
