--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,15 +54,12 @@ flutter:
 
   assets:
     - assets/images/kaaba.png
-    - assets/images/allah.png
-    - assets/images/seb7a.png
-    - assets/images/zakat.png
     - assets/images/muslim_logo.png
-    - assets/images/basmalah.png
     - assets/json/azkar.json
     - assets/json/azkar_en.json
     - assets/json/names_of_allah.json
     - assets/home/
+    - assets/quran/
 
 flutter_launcher_icons:
   android: "launcher_icon"
