feat: Add Hadith, Quran, Prayer Times, Zakat, Qiblah, Sebha, Azkar, Names of Allah modules, along with localization and core components.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
     - assets/json/names_of_allah.json
     - assets/home/
     - assets/quran/
+    - assets/hadith/
+    - assets/qiblah/
 
 flutter_launcher_icons:
   android: "launcher_icon"
