--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_fonts: ^6.3.2
   awesome_notifications: ^0.10.1
   just_audio_background: ^0.0.1-beta.17
+  audio_service: ^0.18.12
   permission_handler: ^12.0.1
   flutter_qiblah: ^3.1.0+1
   flutter_bloc: ^9.1.1
@@ -41,6 +42,8 @@ dependencies:
   scrollable_positioned_list: ^0.3.8
   internet_state_manager: ^1.10.1+3
   flutter_screenutil: ^5.9.3
+  get_it: ^9.2.0
+  equatable: ^2.0.8
 
 dev_dependencies:
   flutter_test:
