feat: Introduce Prayer Times and Azkar features, alongside core service locator and app initialization.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
     <application
         android:label="muslim"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/launcher_icon"
+        android:usesCleartextTraffic="true">
 
         <!-- Activity الأساسية -->
         <activity
